@@ -81,6 +81,9 @@ Other Changes
 
 * SOLR-11106: TestLBHttpSolrClient.testReliablity takes 30 seconds because of the wrong server name
   (Kensho Hirasawa via Erick Erickson)
+  
+* SOLR-11122: Creating a core should write a core.properties file first and clean up on failure
+  (Erick Erickson)
 
 ==================  7.0.0 ==================
 
